# poster-analyzer

./: LICENSE  README.md  pyproject.toml
examples/: basic.py
poster_analyzer/: __init__.py  app.py  text.py
poster_analyzer/recognizers/: __init__.py  abstract.py
poster_analyzer/recognizers/text/: recognizer.py
